--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,5 @@
-plugins {
-    id 'java'
-    id 'maven-publish'
-}
+apply plugin: 'java'
+apply plugin: 'maven-publish'
 
 group = 'dev.manere'
 version = '1.0.0'
@@ -15,10 +13,10 @@ repositories {
 }
 
 dependencies {
-    compileOnly "io.papermc.paper:paper-api:1.20.4-R0.1-SNAPSHOT"
+    compileOnly "io.papermc.paper:paper-api:1.21-R0.1-SNAPSHOT"
 }
 
-def targetJavaVersion = 21;
+def targetJavaVersion = 21
 java {
     sourceCompatibility = JavaVersion.VERSION_21
     targetCompatibility = JavaVersion.VERSION_21
@@ -50,5 +48,5 @@ publishing {
 }
 
 wrapper {
-    gradleVersion = '8.5'
+    gradleVersion = '8.9'
 }
